--- a/inst/book/assets/tex/template.tex
+++ b/inst/book/assets/tex/template.tex
@@ -141,6 +141,12 @@ $endif$
 \babelhyphenation[brazilian]{con-so-le}
 \babelhyphenation[brazilian]{mo-de-los}
 \babelhyphenation[brazilian]{má-xi-mo}
+\babelhyphenation[brazilian]{pa-râ-me-tros}
+\babelhyphenation[brazilian]{a-no-ta-ção}
+\babelhyphenation[brazilian]{va-li-da-ção}
+\babelhyphenation[brazilian]{mo-di-fi-ca-ções}
+\babelhyphenation[brazilian]{re-pre-sen-tar}
+\babelhyphenation[brazilian]{a-pre-sen-ta-das}
 % \babelhyphenation[english]{what-ever}
 
 % Estes comandos definem o título e autoria do trabalho e devem sempre ser
