pequenas correções identificadas depois de rodar

--- a/inst/book/Resolvendo-Captchas.tex
+++ b/inst/book/Resolvendo-Captchas.tex
@@ -354,11 +354,11 @@ Agradeço à minha noiva Beatriz Milz, por todo o apoio, dedicação e paciênci
 
 Agradeço ao Fernando Corrêa, por tantas coisas que é difícil de expressar. Fernando foi quem me convenceu a desenvolver o doutorado em torno dos Captchas, em uma conversa que tivemos no carro. Cada conversa com Fernando é um aprendizado novo, seja sobre as filosofias mais profundas, os problemas mais importantes da humanidade ou sobre os personagens mais engraçados do BBB.
 
-Agradeço ao Athos Damiani, meu grande amigo, colega de TCC e \textit{roomate}, pelas grandes discussões. O Athos é uma pessoa maravilhosa de discutir, pois ele não desiste! Isso fez com que eu precisasse entender mais dos assuntos para argumentar, percebendo que na verdade eu não estava entendendo tanto. Além disso, Athos foi quem me ensinou a resolver Captchas de audio, o que me ajudou muito na construção das soluções.
+Agradeço ao Athos Damiani, meu grande amigo, colega de TCC e \textit{roomate}, pelas grandes discussões. O Athos é uma pessoa maravilhosa de discutir, pois ele não desiste! Isso fez com que eu precisasse entender mais dos assuntos para argumentar, percebendo que na verdade eu não estava entendendo tanto. Além disso, Athos foi quem me ensinou a resolver Captchas de áudio, o que me ajudou muito na construção das soluções.
 
 Para completar o grupo de sócios da Curso-R, agradeço imensamente ao William Amorim, meu grande amigo e parceiro no processo de doutoramento. Talvez ele não saiba, mas sempre foi o pilar que me apoiou nas horas difíceis, já que terminou o doutorado antes de mim e me mostrou empiricamente que isso era possível.
 
-Agradeço também a todas as pessoas das outras empresas que faço parte: ABJ, Insper e Terranova. O suporte de vocês foi fundamental para que eu conseguisse tempo para desenvolver a tese. Agradecimentos especiais à Barbara Tassoni, Igor Pretel, Marcelo Guedes Nunes, Ricardo Feliz e Renata Hirota.
+Agradeço também a todas as pessoas das outras empresas que faço parte: ABJ, Insper e Terranova. O suporte de vocês foi fundamental para que eu conseguisse tempo para desenvolver a tese. Agradecimentos especiais à Barbara Tassoni, Bruno Daleffi, Igor Pretel, Marcelo Guedes Nunes, Ricardo Feliz e Renata Hirota.
 
 Também gostaria de agradecer a uma instituição, o Instituto de Matemática e Estatística da Universidade de São Paulo. Fazer a graduação, mestrado e doutorado nessa instituição foi uma experiência transformadora. Espero poder retribuir pelo menos em parte tudo o que o maravilhoso universo da estatística me proporcionou. Agradeço a todos os professores, alunos e funcionários que fizeram e continuam fazendo parte dessa história.
 
@@ -530,7 +530,6 @@ Captchas, or Completely Automated Public Turing tests to tell Computers and Huma
    \beta & \text{viés (intercepto) em um passo de batch normalization}\\
    \gamma & \text{parâmetro em um passo de batch normalization}\\
    I & \text{função indicadora}\\
-   \ell & \text{log-verossimilhança}\\
    \theta & \text{parâmetros de um modelo}\\
    \nabla & \text{gradiente (vetor de derivadas parciais)}\\
    m,v,\hat m, \hat v, \beta_2, \beta_2, \epsilon & \text{parâmetros do otimizador ADAM}\\
@@ -1914,7 +1913,7 @@ Figura~\ref{fig-tjmg-exemplo-conv-vertical}.
 }
 
 \caption{\label{fig-tjmg-exemplo-conv-vertical}Aplicação de uma
-convolução com kernel horizontal.}
+convolução com kernel vertical.}
 
 \end{figure}
 
@@ -1940,7 +1939,7 @@ proeminetes).
 }
 
 \caption{\label{fig-tjmg-exemplo-conv-vertical-bias}Aplicação de uma
-convolução com kernel horizontal.}
+convolução com kernel vertical e viés.}
 
 \end{figure}
 
@@ -3541,7 +3540,7 @@ uma acurácia de 100\%.
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.75\textwidth,height=\textheight]{./resultados_files/figure-pdf/fig-aplicacao-iterada-1.pdf}
+{\centering \includegraphics[width=0.85\textwidth,height=\textheight]{./resultados_files/figure-pdf/fig-aplicacao-iterada-1.pdf}
 
 }
 
@@ -3595,9 +3594,11 @@ aparecer (JPEG, PNG, entre outros).
 
 \begin{figure}[H]
 
-{\centering \includegraphics[width=0.3\textwidth,height=\textheight]{./resultados_files/figure-pdf/unnamed-chunk-11-1.png}
+{\centering \includegraphics[width=0.3\textwidth,height=\textheight]{./resultados_files/figure-pdf/fig-uso-basico-captcha-1.png}
 
 }
+
+\caption{\label{fig-uso-basico-captcha}\textbf{?(caption)}}
 
 \end{figure}
 
